if(HAVE_YAML)
  add_subdirectory(ShellBondFilter)
endif(HAVE_YAML)
add_subdirectory(InitialDamage)
add_subdirectory(LinearLPSBar)
add_subdirectory(NeighborhoodVolume)
add_subdirectory(ep_cube)
add_subdirectory(ThermalExpansionCube)
add_subdirectory(ThermalExpansionBondFailure)
add_subdirectory(ThermalExpansionCubeElasticCorrespondence)
add_subdirectory(Contact_Friction)
add_subdirectory(Contact_Friction_Time_Dependent_Coefficient)
add_subdirectory(Contact_2x1x1)
add_subdirectory(BondBreakingInitialVelocity)
add_subdirectory(BondBreakingInitialVelocity-EP)
add_subdirectory(BondBreakingInitialVelocity_TimeDependentCS)
add_subdirectory(AdaptiveQuasiStaticSolver)
add_subdirectory(Compression_2x1x1)
add_subdirectory(Compression_3x1x1)
add_subdirectory(CompressionImplicit_2x1x1)
add_subdirectory(CompressionImplicitEssentialBC_2x1x1)
add_subdirectory(Compression_3x1x1_InfluenceFunction)
add_subdirectory(CompressionInitDisp_2x1x1)
add_subdirectory(VariableHorizonParsing)
add_subdirectory(MultipleHorizons)
add_subdirectory(ElasticCorrespondenceQSTension)
add_subdirectory(IsotropicHardeningPlasticFullyPrescribedTension_NoFlaw)
add_subdirectory(IsotropicHardeningPlasticFullyPrescribedTension_WithFlaw)
add_subdirectory(ViscoplasticNeedlemanFullyPrescribedTension_WithFlaw)
add_subdirectory(ViscoplasticNeedlemanFullyPrescribedTension_NoFlaw)
add_subdirectory(ElasticPlasticCorrespondenceFullyPrescribedTension)
add_subdirectory(ElasticCorrespondenceFullyPrescribedTension)
add_subdirectory(ElasticHypoelasticCorrespondenceFullyPrescribedTension)
add_subdirectory(ElasticBondAssociatedCorrespondenceFullyPrescribedTension)
add_subdirectory(SimpleImplicitDiffusion)
add_subdirectory(DiffusionImprovedQuadrature)
add_subdirectory(InterfaceAwareDamageModel)

add_custom_target( vtest
   COMMAND ctest
)
